zetasql/analyzer/testdata/drop.test
[default language_features=MAXIMUM]
DROP TABLE foo;
--
DropStmt(object_type="TABLE", is_if_exists=FALSE, name_path=foo)
==

DROP TABLE namespace.foo;
--
DropStmt(object_type="TABLE", is_if_exists=FALSE, name_path=namespace.foo)
==

DROP EXTERNAL TABLE foo;
--
DropStmt(object_type="EXTERNAL TABLE", is_if_exists=FALSE, name_path=foo)
==

DROP EXTERNAL TABLE namespace.foo;
--
DropStmt(object_type="EXTERNAL TABLE", is_if_exists=FALSE, name_path=namespace.foo)
==

DROP CONNECTION foo;
--
DropStmt(object_type="CONNECTION", is_if_exists=FALSE, name_path=foo)
==

DROP CONNECTION foo.bar.baz;
--
DropStmt(object_type="CONNECTION", is_if_exists=FALSE, name_path=foo.bar.baz)
==

DROP CONNECTION IF EXISTS foo.bar.baz;
--
DropStmt(object_type="CONNECTION", is_if_exists=TRUE, name_path=foo.bar.baz)
==

DROP VIEW bar;
--

DropStmt(object_type="VIEW", is_if_exists=FALSE, name_path=bar)
==

DROP VIEW namespace.bar;
--
DropStmt(object_type="VIEW", is_if_exists=FALSE, name_path=namespace.bar)
==

DROP TABLE IF EXISTS foo;
--
DropStmt(object_type="TABLE", is_if_exists=TRUE, name_path=foo)
==

DROP SCHEMA {{|IF EXISTS}} foo.bar {{|RESTRICT|CASCADE}};
--
ALTERNATION GROUP: <empty>
--
DropStmt(object_type="SCHEMA", is_if_exists=FALSE, name_path=foo.bar)
--
ALTERNATION GROUP: RESTRICT
--
DropStmt(object_type="SCHEMA", is_if_exists=FALSE, name_path=foo.bar, drop_mode=RESTRICT)
--
ALTERNATION GROUP: CASCADE
--
DropStmt(object_type="SCHEMA", is_if_exists=FALSE, name_path=foo.bar, drop_mode=CASCADE)
--
ALTERNATION GROUP: IF EXISTS,
--
DropStmt(object_type="SCHEMA", is_if_exists=TRUE, name_path=foo.bar)
--
ALTERNATION GROUP: IF EXISTS,RESTRICT
--
DropStmt(object_type="SCHEMA", is_if_exists=TRUE, name_path=foo.bar, drop_mode=RESTRICT)
--
ALTERNATION GROUP: IF EXISTS,CASCADE
--
DropStmt(object_type="SCHEMA", is_if_exists=TRUE, name_path=foo.bar, drop_mode=CASCADE)
==

DROP EXTERNAL SCHEMA {{|IF EXISTS}} foo.bar {{|RESTRICT|CASCADE}};
--
ALTERNATION GROUP: <empty>
--
DropStmt(object_type="EXTERNAL SCHEMA", is_if_exists=FALSE, name_path=foo.bar)
--
ALTERNATION GROUP: RESTRICT
--
ERROR: Syntax error: 'RESTRICT' is not supported for DROP EXTERNAL SCHEMA [at 1:31]
DROP EXTERNAL SCHEMA  foo.bar RESTRICT;
                              ^
--
ALTERNATION GROUP: CASCADE
--
ERROR: Syntax error: 'CASCADE' is not supported for DROP EXTERNAL SCHEMA [at 1:31]
DROP EXTERNAL SCHEMA  foo.bar CASCADE;
                              ^
--
ALTERNATION GROUP: IF EXISTS,
--
DropStmt(object_type="EXTERNAL SCHEMA", is_if_exists=TRUE, name_path=foo.bar)
--
ALTERNATION GROUP: IF EXISTS,RESTRICT
--
ERROR: Syntax error: 'RESTRICT' is not supported for DROP EXTERNAL SCHEMA [at 1:40]
DROP EXTERNAL SCHEMA IF EXISTS foo.bar RESTRICT;
                                       ^
--
ALTERNATION GROUP: IF EXISTS,CASCADE
--
ERROR: Syntax error: 'CASCADE' is not supported for DROP EXTERNAL SCHEMA [at 1:40]
DROP EXTERNAL SCHEMA IF EXISTS foo.bar CASCADE;
                                       ^
==

DROP SEQUENCE foo;
--
DropStmt(object_type="SEQUENCE", is_if_exists=FALSE, name_path=foo)
==

DROP SEQUENCE foo.bar.baz;
--
DropStmt(object_type="SEQUENCE", is_if_exists=FALSE, name_path=foo.bar.baz)
==

DROP SEQUENCE IF EXISTS foo.bar.baz;
--
DropStmt(object_type="SEQUENCE", is_if_exists=TRUE, name_path=foo.bar.baz)
